[package]
name = "anon-issue-submit"
version = "0.1.0"
authors = ["robinwilliam.hundt <robinwilliam.hundt@stud.uni-goettingen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde_derive = "1.0.101"
serde = "1.0.101"
gitlab = "0.1202.0"
dotenv = "0.14.1"
rocket_cors = "0.5.0"
